fix connection error with increased request timeout along with diagnose_connectino fun

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,17 @@
                 <form id="scrapingForm">
                     <div class="form-group">
                         <label for="year">Academic Year</label>
-                        <input type="text" id="year" name="year" value="22" placeholder="e.g., 22" required>
+                        <input type="text" id="year" name="year" placeholder="e.g., 22" required>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
                             <label for="collegeCode">College Code</label>
-                            <input type="text" id="collegeCode" name="college_code" value="008" placeholder="e.g., 008" required>
+                            <input type="text" id="collegeCode" name="college_code" placeholder="e.g., 172" required>
                         </div>
                         <div class="form-group">
                             <label for="branchCode">Branch Code</label>
-                            <input type="text" id="branchCode" name="branch_code" value="CM" placeholder="e.g., CM" required>
+                            <input type="text" id="branchCode" name="branch_code" placeholder="e.g., CM" required>
                         </div>
                     </div>
 
